--- a/package.json
+++ b/package.json
@@ -8,40 +8,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@bugsnag/expo": "^7.1.1",
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/netinfo": "5.5.1",
-    "@react-navigation/bottom-tabs": "^5.4.4",
-    "@react-navigation/native": "^5.3.2",
-    "@react-navigation/stack": "^5.3.5",
-    "apisauce": "^1.1.1",
-    "dayjs": "^1.8.28",
-    "expo": "~37.0.3",
-    "expo-blur": "~8.1.0",
-    "expo-constants": "^9.0.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-location": "~8.1.0",
-    "expo-permissions": "~8.1.0",
-    "expo-secure-store": "~8.1.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "6.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "apisauce": "^2.1.1",
+    "dayjs": "^1.10.5",
+    "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
+    "expo-blur": "~9.0.3",
+    "expo-constants": "~10.1.3",
+    "expo-image-picker": "~10.1.4",
+    "expo-location": "~12.0.4",
+    "expo-notifications": "~0.11.6",
+    "expo-secure-store": "~10.1.0",
+    "expo-status-bar": "~1.0.4",
     "formik": "^2.1.4",
-    "jwt-decode": "^2.2.0",
-    "lottie-react-native": "~2.6.1",
-    "moment": "^2.26.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "3.5.0",
+    "moment": "^2.29.1",
+    "react": "16.13.1",
+    "react-dom": "~16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-expo-image-cache": "^4.1.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7",
-    "yup": "^0.28.5"
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-web": "~0.13.12",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.9.0",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
