--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "email": "email",
+  "license": "MIT",
+  "version": "0.0.1",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
