--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-progress": "^4.1.2",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "yup": "^0.32.9"
   },
